---
source: tests/integration/update.rs
expression: result
---
ServerPackages:
  A.lua: "return require(script.Parent._Index[\"diamond-graph_direct-dependency-a@0.1.1\"][\"direct-dependency-a\"])\n"
  B.lua: "return require(script.Parent._Index[\"diamond-graph_direct-dependency-b@0.1.0\"][\"direct-dependency-b\"])\n"
  _Index:
    diamond-graph_direct-dependency-a@0.1.1:
      Indirect.lua: "return require(script.Parent.Parent[\"diamond-graph_indirect-dependency-a@0.1.1\"][\"indirect-dependency-a\"])\n"
      direct-dependency-a:
        default.project.json: "{\n\t\"name\": \"direct-dependency-a\",\n\t\"tree\": {\n\t\t\"Packages\": {\n\t\t\t\"$path\": \"Packages\"\n\t\t},\n\t\t\"$path\": \"src\"\n\t}\n}"
        src:
          init.lua: "local Indirect = require(script.Parent.Indirect)\n\nreturn if Indirect == 420 then \"Bingo!\" else \"Naw...\""
        wally.toml: "[package]\nname = \"diamond-graph/direct-dependency-a\"\nversion = \"0.1.1\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[server-dependencies]\nIndirect = \"diamond-graph/indirect-dependency-a@0.1.1\""
    diamond-graph_direct-dependency-b@0.1.0:
      Indirect.lua: "return require(script.Parent.Parent[\"diamond-graph_indirect-dependency-a@0.2.0\"][\"indirect-dependency-a\"])\n"
      direct-dependency-b:
        default.project.json: "{\n\t\"name\": \"direct-dependency-b\",\n\t\"tree\": {\n\t\t\"Packages\": {\n\t\t\t\"$path\": \"Packages\"\n\t\t},\n\t\t\"$path\": \"src\"\n\t}\n}"
        src:
          init.lua: "local Indirect = require(script.Parent.Indirect)\n\nreturn Indirect == 420"
        wally.toml: "[package]\nname = \"diamond-graph/direct-dependency-b\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[server-dependencies]\nIndirect = \"diamond-graph/indirect-dependency-a@0.2.0\""
    diamond-graph_indirect-dependency-a@0.1.1:
      indirect-dependency-a:
        default.project.json: "{\n\t\"name\": \"indirect-dependency-a\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
        src:
          init.lua: "-- Zesty\nreturn function()\n\treturn 420\nend\n"
        wally.toml: "[package]\nname = \"diamond-graph/indirect-dependency-a\"\nversion = \"0.1.1\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n"
    diamond-graph_indirect-dependency-a@0.2.0:
      indirect-dependency-a:
        default.project.json: "{\n\t\"name\": \"indirect-dependency-a\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
        src:
          init.lua: "return function()\n\treturn 42\nend\n"
        wally.toml: "[package]\nname = \"diamond-graph/indirect-dependency-a\"\nversion = \"0.2.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n"
default.project.json: "{\n\t\"name\": \"root\",\n\t\"tree\": {\n\t\t\"Packages\": {\n\t\t\t\"$path\": \"Packages\"\n\t\t},\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.lua: "local A = require(script.Parent.A)\nlocal B = require(script.Parent.B)\n\nreturn `{A} {B}`"
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"diamond-graph/direct-dependency-a\"\nversion = \"0.1.1\"\ndependencies = [[\"Indirect\", \"diamond-graph/indirect-dependency-a@0.1.1\"]]\n\n[[package]]\nname = \"diamond-graph/direct-dependency-b\"\nversion = \"0.1.0\"\ndependencies = [[\"Indirect\", \"diamond-graph/indirect-dependency-a@0.2.0\"]]\n\n[[package]]\nname = \"diamond-graph/indirect-dependency-a\"\nversion = \"0.1.1\"\ndependencies = []\n\n[[package]]\nname = \"diamond-graph/indirect-dependency-a\"\nversion = \"0.2.0\"\ndependencies = []\n\n[[package]]\nname = \"diamond-graph/root\"\nversion = \"0.1.0\"\ndependencies = [[\"A\", \"diamond-graph/direct-dependency-a@0.1.1\"], [\"B\", \"diamond-graph/direct-dependency-b@0.1.0\"]]\n"
wally.toml: "[package]\nname = \"diamond-graph/root\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[server-dependencies]\nA = \"diamond-graph/direct-dependency-a@0.1.0\"\nB = \"diamond-graph/direct-dependency-b@0.1.0\""

